<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent" android:layout_height="match_parent">

       <LinearLayout
           android:layout_width="match_parent"
           android:layout_height="wrap_content"
           android:background="#111111"
           android:id="@+id/caltext">
           <TextView
               android:layout_width="match_parent"
               android:layout_height="match_parent"
               android:text="CALORIE CALCULATOR"
               android:textSize="25dp"
               android:textStyle="bold"
               android:textColor="#ffffff"
               />
       </LinearLayout>

        <ScrollView
            android:layout_below="@+id/caltext"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">
    <RelativeLayout
        android:layout_below="@+id/caltext"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#848484">
            <TextView
                android:paddingTop="10dp"
                android:id="@+id/weighttext"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Weight"
                android:textSize="20dp"
                android:textStyle="bold"
                android:textColor="#000000"/>

            <EditText
                android:layout_below="@+id/weighttext"
                android:id="@+id/weight"
                android:layout_width="match_parent"
                android:layout_height="57dp"
                android:inputType="numberDecimal"
                android:textColorHint="#000000"
                android:hint="in kg"

                />
            <TextView
                android:layout_below="@+id/weight"
                android:id="@+id/heighttext"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Height"
                android:textSize="20dp"
                android:textStyle="bold"
                android:textColor="#000000"/>
            <EditText
                android:id="@+id/heightft"
                android:layout_below="@+id/heighttext"
                android:layout_width="100dp"
                android:layout_height="57dp"
                android:inputType="numberDecimal"
                android:textColorHint="#000000"
                android:hint="ft"

                />
            <EditText
                android:id="@+id/heightin"
                android:layout_toRightOf="@id/heightft"
                android:layout_below="@+id/heighttext"
                android:layout_width="100dp"
                android:layout_height="57dp"
                android:inputType="numberDecimal"
                android:textColorHint="#000000"
                android:hint="in"
                />
            <TextView
                android:layout_below="@+id/heightin"
                android:id="@+id/age"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Age"
                android:textSize="20dp"
                android:textStyle="bold"
                android:textColor="#000000"/>
            <EditText
                android:id="@+id/agevalue"
                android:layout_below="@+id/age"
                android:layout_width="100dp"
                android:layout_height="57dp"
                android:inputType="number"
                android:textColorHint="#000000"
                android:hint="in yrs"/>
            <TextView
                android:layout_below="@+id/agevalue"
                android:id="@+id/gender"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Gender"
                android:textSize="20dp"
                android:textStyle="bold"
                android:textColor="#000000"/>
            <RadioGroup
                android:layout_below="@+id/gender"
                android:id="@+id/radio"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <RadioButton
                    android:id="@+id/radio_male"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:onClick="onRadioButtonClicked"
                    android:text="Male"/>

                <RadioButton
                    android:id="@+id/radio_female"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:onClick="onRadioButtonClicked"
                    android:text="Female"/>
            </RadioGroup>

            <TextView
                android:layout_below="@+id/radio"
                android:paddingTop="10dp"
                android:id="@+id/spinnertext"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Choose Lifestyle"
                android:textSize="20dp"
                android:textStyle="bold"
                android:textColor="#000000"/>
            <LinearLayout
                android:layout_below="@+id/spinnertext"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:id="@+id/linearspin"
                android:orientation="vertical">
                <Spinner
                    android:id="@+id/spinner1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:entries="@array/lifestyle"
                    android:prompt="@string/lifestyle_prompt" />
            </LinearLayout>


            <Button
                android:id="@+id/bfbutton"
                android:layout_below="@+id/linearspin"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Calculate"
                android:onClick="onClickcal"
                />


            <TextView
                android:layout_below="@+id/bfbutton"
                android:id="@+id/resulttext"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="RESULT:Your Maintenance Calorie is:"
                android:textSize="20dp"
                android:textStyle="bold"
                android:textColor="#000000"/>
            <!--<ScrollView-->
            <!--android:layout_width="wrap_content"-->
            <!--android:layout_height="wrap_content"-->
            <!--android:layout_below="@id/resulttext"-->
            <!--android:id="@+id/scroll">-->
            <!--<LinearLayout-->
            <!--android:layout_width="wrap_content"-->
            <!--android:layout_height="wrap_content"-->
            <!--android:orientation="vertical">-->

            <TextView
                android:layout_below="@id/resulttext"
                android:id="@+id/calcal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:background="#000000"
                android:fontFamily="sans-serif"
                android:paddingBottom="10dp"
                android:paddingLeft="10dp"
                android:paddingRight="10dp"
                android:paddingTop="10dp"
                android:textColor="#ffffff"
                android:textSize="25dp" />
            <TextView
                android:layout_below="@+id/calcal"
                android:id="@+id/tableinfo"
                android:layout_marginBottom="10dp"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:background="#000000"
                android:textColor="#ffffff"
                android:fontFamily="sans-serif"
                android:paddingTop="10dp"
                android:paddingLeft="10dp"
                android:paddingRight="10dp"
                android:paddingBottom="10dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="11dp"
                android:gravity="center"
                android:text="@string/tableinfo"
                />
            <!--</LinearLayout>-->
            <!--</ScrollView>-->
        </RelativeLayout>
    </ScrollView>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#848484"
        android:orientation="horizontal"
        android:layout_alignParentBottom="true"
        android:layout_alignParentStart="true"
        android:id="@+id/linearLayout">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#333333"
            android:text="@string/rights"
            android:textColor="#ffffff"
            android:textSize="15dp"
            android:layout_gravity="bottom"
            />
    </LinearLayout>
</RelativeLayout>